Setting up html structure and initial styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <header>
+            <img class="profile" src="./images/icon-profile.png" alt="header profile icon">
+            <img class="logo" src="./images/logo.png" alt="header logo">
+            <img class="chat" src="./images/icon-chat.png" alt="header chat icon">
+        </header>
+        <main>
+            <section class="dog-display">
+                <img class="dog-profile-picture" src="./images/dog-bella.jpg">
+                <h2 class="dog-name">Dog name</h2>
+                <p class="dog-opener">Dog opener</p>
+            </section>
+            <section class="interactions">
+                <img class="dislike-button" src="./images/icon-cross.png" alt="dislike button">
+                <img class="like-button" src="./images/icon-heart.png" alt="like button">
+            </section>
+        </main>
         <script src="/index.js" type="module"></script>
     </body>
 </html>
