Fixed stylesheet linking issue

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="./styles/index.css">
     </head>
     <body>
         <header>
@@ -11,8 +11,8 @@
         <main>
             <section class="dog-display">
                 <img class="dog-profile-picture" src="./images/dog-bella.jpg">
-                <h2 class="dog-name">Dog name</h2>
-                <p class="dog-opener">Dog opener</p>
+                <h2 class="dog-name detail">Dog name</h2>
+                <p class="dog-opener detail">Dog opener</p>
             </section>
             <section class="interactions">
                 <img class="dislike-button" src="./images/icon-cross.png" alt="dislike button">
