Finished styling and formatting

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         </header>
         <main>
             <section class="dog-display">
-                <img src="../images/dog-bella.jpg" alt="dog profile picture">
+                <div class="img-gradient">
+                    <img src="../images/dog-teddy.jpg" alt="dog profile picture">
+                </div>
                 <div class="detail-overlay">
                     <h2 class="dog-name detail">Dog name</h2>
                     <p class="dog-opener detail">Dog opener</p>    
