Getting initial js set up

--- a/index.html
+++ b/index.html
@@ -10,21 +10,15 @@
             <img class="chat" src="./images/icon-chat.png" alt="header chat icon">
         </header>
         <main>
-            <section class="dog-display">
-                <div class="img-gradient">
-                    <img src="../images/dog-teddy.jpg" alt="dog profile picture">
-                </div>
-                <div class="detail-overlay">
-                    <h2 class="dog-name detail">Dog name</h2>
-                    <p class="dog-opener detail">Dog opener</p>    
-                </div>
+            <section class="dog-display" id="dog-display">
+                <!--Display dog here-->
             </section>
             <section class="interactions">
-                <div class="interaction-button">
-                    <img class="dislike-button" src="./images/icon-cross.png" alt="dislike button">
+                <div class="interaction-button dislike-button" id="dislike-button">
+                    <img src="./images/icon-cross.png" alt="dislike button">
                 </div>
-                <div class="interaction-button">
-                    <img class="like-button" src="./images/icon-heart.png" alt="like button">
+                <div class="interaction-button like-button" id="like-button">
+                    <img src="./images/icon-heart.png" alt="like button">
                 </div>
             </section>
         </main>
