Moved away from absolute positioning

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <!--Display dog here-->
             </section>
             <section class="interactions">
-                <div class="interaction-button dislike-button" id="dislike-button">
-                    <img src="./images/icon-cross.png" alt="dislike button">
+                <div class="interaction-button dislike-button" id="dislike-button" data-btn="dislike">
+                    <img src="./images/icon-cross.png" alt="dislike button" data-btn="dislike">
                 </div>
-                <div class="interaction-button like-button" id="like-button">
-                    <img src="./images/icon-heart.png" alt="like button">
+                <div class="interaction-button like-button" id="like-button" data-btn="like">
+                    <img src="./images/icon-heart.png" alt="like button" data-btn="like">
                 </div>
             </section>
         </main>
